...
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/profileBioButton"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:onClick="onProfileBioClick"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="Edit Bio"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
