<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="jnm219.cse216.lehigh.edu.tutorialforjnm219.CreateBuzzActivity"
    tools:showIn="@layout/createbuzz_layout">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://szchemas.android.com/tools"
        android:layout_width="392dp"
        android:layout_height="585dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/topLabel"
            android:layout_width="383dp"
            android:layout_height="52dp"
            android:text=""
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="8dp" />

        <EditText
            android:id="@+id/enterSubject"
            android:layout_width="384dp"
            android:layout_height="52dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="62dp" />

        <EditText
            android:id="@+id/enterMessage"
            android:layout_width="384dp"
            android:layout_height="52dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/enterSubject"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="62dp" />

        <FrameLayout
            android:id="@+id/textureview"
            android:layout_width="325dp"
            android:layout_height="325dp"
            android:layout_above="@+id/getpicture"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/getpicture"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonCancel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="Take Picture" />

        <Button
            android:id="@+id/getFile"
            android:layout_width="191dp"
            android:layout_height="50dp"
            android:layout_above="@+id/buttonOk"
            android:layout_alignLeft="@+id/buttonOk"
            android:layout_alignStart="@+id/buttonOk"
            android:text="Search File" />


        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="191dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="Cancel"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="371dp" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="191dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="OK"
            tools:layout_editor_absoluteX="191dp"
            tools:layout_editor_absoluteY="371dp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>