<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="jnm219.cse216.lehigh.edu.tutorialforjnm219.MainActivity"
    tools:showIn="@layout/activity_welcome">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/topLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="Welcome To The Buzz! Log in to see Buzzes!"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="10dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="8dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LogOut Google Account"
            android:id="@+id/sign_out_button"
            android:layout_alignParentBottom="true"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>